[project]
requires-python = ">=3.11, <3.13"

[tool.poetry]
name = "prep-rate-limiter"
description = "Provides scaffolding for rate limited features"
version = "5.0.5"
authors = ["BlindfoldedSurgery <team@blindfolded.surgery>"]
license = "MIT"
packages = [{ from = "src", include = "rate_limiter" }]

[project.urls]
repository = "https://github.com/preparingforexams/rate_limiter"

[tool.poetry.extras]
opentelemetry-postgres = [
    "opentelemetry-instrumentation-psycopg",
]
opentelemetry-sqlite3 = [
    "opentelemetry-instrumentation-sqlite3",
]
postgres = [
    "psycopg",
    "psycopg_pool",
]

[tool.poetry.dependencies]
python = ">=3.11 <3.13"
Deprecated = "^1.2.13"
opentelemetry-api = "^1.22.0"
opentelemetry-instrumentation-psycopg = { version = "*", optional = true }
opentelemetry-instrumentation-sqlite3 = { version = "*", optional = true }
psycopg = { version = "~3.2", extras = ["binary"], optional = true }
psycopg_pool = { version = "~3.2", extras = ["binary"], optional = true }
tzdata = "*"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.12.0"
coverage = { extras = ["toml"], version = "^7.3.1" }
mypy = "^1.4.0"
pre-commit = "^4.0.0"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
ruff = "0.7.0"
types-Deprecated = "^1.2.9"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version_provider = "poetry"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true

[tool.pytest.ini_options]
markers = [
    "local",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.isort]
known-first-party = ["rate_limiter"]

