[project]
requires-python = ">=3.11, <3.14"
name = "prep-rate-limiter"
description = "Provides scaffolding for rate limited features"
version = "7.0.0"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "Deprecated >=1, <2",
    "opentelemetry-api >=1.22, <2",
    "tzdata",
]

[project.optional-dependencies]
opentelemetry-postgres = [
    "opentelemetry-instrumentation-psycopg",
]
opentelemetry-sqlite3 = [
    "opentelemetry-instrumentation-sqlite3",
]
postgres = [
    "psycopg [binary] ==3.2.*",
    "psycopg_pool ==3.2.*",
]

[project.urls]
repository = "https://github.com/preparingforexams/rate_limiter"

[dependency-groups]
dev = [
    "commitizen ==4.1.0",
    "coverage [toml] >=7, <8",
    "mypy ==1.14.*",
    "pre-commit >=4, <5",
    "pytest >=8, <9",
    "pytest-cov >=6, <7",
    "ruff ==0.8.6",
    "types-Deprecated >=1, <2",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/rate_limiter",
    "CHANGELOG.md",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rate_limiter"]

[tool.uv]
publish-url = "https://pypi.bjoernpetersen.net/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true

[tool.pytest.ini_options]
markers = [
    "local",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.isort]
known-first-party = ["rate_limiter"]

