[project]
requires-python = ">=3.12, <3.15"
name = "prep-rate-limiter"
description = "Provides scaffolding for rate limited features"
version = "8.1.3"
authors = [{ name = "Björn Petersen", email = "pypi@bjoernpetersen.net" }]
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Private :: Do Not Upload",
]

dependencies = [
    "opentelemetry-api >=1.22, <2",
    "tzdata",
]

[project.optional-dependencies]
opentelemetry-postgres = [
    "opentelemetry-instrumentation-psycopg",
]
opentelemetry-sqlite3 = [
    "opentelemetry-instrumentation-sqlite3",
]
postgres = [
    "psycopg [binary] ==3.2.*",
    "psycopg_pool ==3.2.*",
]

[project.urls]
changelog = "https://github.com/preparingforexams/rate_limiter/blob/main/CHANGELOG.md"
repository = "https://github.com/preparingforexams/rate_limiter"

[dependency-groups]
dev = [
    "commitizen ==4.10.0",
    "coverage [toml] >=7, <8",
    "mypy ==1.18.*",
    "pre-commit >=4, <5",
    "pytest >=8, <9",
    "pytest-asyncio ==1.3.0",
    "pytest-cov >=7, <8",
    "ruff ==0.14.4",
    "types-Deprecated >=1, <2",
]

[tool.uv]
publish-url = "https://pypi.bjoernpetersen.net/"

[tool.uv.build-backend]
module-name = "rate_limiter"
source-include = [
    "CHANGELOG.md"
]

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true

[tool.pytest.ini_options]
markers = [
    "local",
]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "TC001",
    "TC002",
    "TC003",
    "TC004",
    "TC005",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.isort]
known-first-party = ["rate_limiter"]

